# py32f0xx-hal

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  build.rs  openocd.cfg
.github/workflows/: ci.yml
examples/: adc_values.rs  blinky.rs  blinky_adc.rs  blinky_delay.rs  blinky_multiple.rs  blinky_rtc.rs  blinky_timer.rs  blinky_timer_irq.rs  exti.rs  flash_systick.rs  flash_systick_fancier.rs  i2c_find_address.rs  i2c_slave.rs  led_hal_button_irq.rs  pwm.rs  pwm_complementary.rs  pwm_mutable_frequency.rs  serial_echo.rs  serial_spi_bridge.rs  serial_stopwatch.rs  spi_hal_apa102c.rs  spi_rc522.rs  watchdog.rs
src/: adc.rs  delay.rs  dma.rs  gpio.rs  i2c.rs  lib.rs  prelude.rs  pwm.rs  rcc.rs  rtc.rs  serial.rs  spi.rs  time.rs  timer.rs  timers.rs  watchdog.rs
src/gpio/: erased.rs  hal_02.rs  hal_1.rs  partially_erased.rs
src/i2c/: hal_02.rs  hal_1.rs  pins.rs
src/rcc/: enable.rs
src/serial/: hal_02.rs  hal_1.rs
src/spi/: dma.rs  hal_02.rs  hal_1.rs
src/timer/: counter.rs  delay.rs  hal_02.rs  hal_1.rs  monotonic.rs  pins.rs  pwm.rs
tools/: capture_example_bloat.sh  capture_nightly_example_bloat.sh  check.py
