[package]
name = "py32f0xx-hal"
version = "0.2.0"
authors = [
    "Daniel Egger <daniel@eggers-club.de>",
    "Thomas Bytheway <github@harkonen.net>",
    "Jesse Braham <jesse@beta7.io>",
]
edition = "2018"
rust-version = "1.59"

keywords = ["arm", "cortex-m", "py32f0xx", "hal"]
license = "0BSD"
readme = "README.md"
repository = "https://github.com/creatoy/py32f0xx-hal"
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access API for py32F0 series microcontrollers"
documentation = "https://docs.rs/crate/py32f0xx-hal"

[package.metadata.docs.rs]
features = ["py32f030", "rt"]
targets = ["thumbv6m-none-eabi"]

[dependencies]
bare-metal = { version = "1.0.0" }
cast = "0.3.0"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
embedded-time = "0.12.1"
embedded-dma = "0.2.0"
nb = "1.1.0"
void = { version = "1.0.2", default-features = false }
defmt = { version = "0.3.8", optional = true }
bitflags = "1.3.2"
fugit = "0.3.7"
fugit-timer = "0.1.3"
rtic-monotonic = { version = "1.0", optional = true }

[dependencies.embedded-hal-02]
package = "embedded-hal"
version = "0.2.7"
features = ["unproven"]

[dependencies.embedded-hal]
version = "1.0"

[dependencies.embedded-hal-nb]
version = "1.0"

[dependencies.embedded-io]
version = "0.6.1"

[dependencies.py32f0]
version = "0.1.1"
features = []
path = "../py32-rs/py32f0"

[dev-dependencies]
cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
defmt = "0.3.8"
defmt-rtt = "0.4.1"
mfrc522 = "0.6.1"

[features]
device-selected = []
rt = ["py32f0/rt"]
py32f030 = ["py32f0/py32f030", "device-selected", "with-dma"]
py32f003 = ["py32f0/py32f003", "device-selected", "with-dma"]
py32f002a = ["py32f0/py32f002a", "device-selected"]
py32f002b = ["py32f0/py32f002b", "device-selected"]

defmt = ["dep:defmt"]

# Features based on Flash size (in kbytes)
flash-16 = []
flash-20 = []
flash-24 = []
flash-32 = []
flash-48 = []
flash-64 = []

# Features based on RAM size (in kbytes)
ram-2 = []
ram-3 = []
ram-4 = []
ram-6 = []
ram-8 = []

# optional peripherals
with-dma = []

# MCU aliases
#
# Features correspond specific mcu series
# Note: The easiest way to pick the proper package feature is to apply
# the matching feature for your MCU!
py32f030xx4 = ["py32f030", "flash-16", "ram-2"]
py32f030xx6 = ["py32f030", "flash-32", "ram-4"]
py32f030xx7 = ["py32f030", "flash-48", "ram-6"]
py32f030xx8 = ["py32f030", "flash-64", "ram-8"]

py32f003xx4 = ["py32f003", "flash-16", "ram-2"]
py32f003xx6 = ["py32f003", "flash-32", "ram-4"]
py32f003xx8 = ["py32f003", "flash-64", "ram-8"]

py32f002ax5 = ["py32f002a", "flash-20", "ram-3"]
py32f002bx5 = ["py32f002b", "flash-24", "ram-3"]

# rtic os
rtic = ["dep:rtic-monotonic"]

[profile.dev]
debug = true
lto = true

[profile.release]
lto = true
debug = true
opt-level = "s"
